2011-02-11  Mark Grondona <mgrondona@llnl.gov>

	* tests/t0004-module-loading.sh :
	  Ensure that test modules are built before running tests.
	  Test that -M overrides PDSH_MISC_MODULES env var.

2010-10-27  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/genders.c :
	  Allow -g to be used with -w to filter a list of wcoll
	  hosts via a genders attribute.

2010-10-26  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/genders.c :
	  Do not print an error if genders file is missing, unless
	  a genders option (-F, -a, -g, -i, -X) is explictly used,
	  then it is a fatal error.

	* src/modules/genders.c :
	  Allow relative path to genders file with -F and/or
	  PDSH_GENDERS_FILE.

2010-10-25  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/sshcmd.c :
	  Pass remote argv to ssh command as it was recieved in pdsh
	  instead of collapsing all arguments into a single command.

2010-10-22  Mark Grondona <mgrondona@llnl.gov>

	* : tag pdsh-2.23.

2010-10-21  Mark Grondona <mgrondona@llnl.gov>

	* pdsh.spec :
	  Add tests to pdsh RPM build.

	* tests/t1001-genders.sh : Add more tests.

	* tests/t0005-rcmd_type-and-user.sh : Added.

	* tests/t0003-wcoll.sh :
	  Add tests for regex(/), hostfile(^), and exclusion(-) 
	  syntax for -w (and -x).

	* src/pdsh/opt.c :
	  Initial regex and wcoll file support for -w and -x.

	* src/pdsh/wcoll.c :
	  Allow '-' to mean stdin for read_wcoll().

	* src/common/split.c :
	  Allow multiple sets of brackets in list_split as was done
	  for hostlist.c.

2010-10-19  Mark Grondona <mgrondona@llnl.gov>

	* Makefile.am, configure.ac, tests/* :
	  Add new pdsh testsuite based on the test-lib.sh from Git.
	  See tests/README for more information.

	* src/pdsh/main.c :
	  Allow PDSH_MODULE_DIR to override pdsh_module_dir iff pdsh
	  is not running as root and isn't running setuid. This will be
	  used mostly for testing purposes.

	* src/modules/slurm.c :
	  Only target running jobs with -j all (not completed for example)
