@@ -1,5 +1,9 @@
 2011-02-11  Mark Grondona <mgrondona@llnl.gov>
 
+	* src/pdsh/dsh.c, src/pdsh/opt.c, src/pdsh/opt.h :
+	  Allow PDSH_REMOTE_PDCP_PATH environment variable to set default
+	  value for -e / remote pdcp path. Fix for gogole code Issue 7.
+
 	* tests/t0004-module-loading.sh :
 	  Ensure that test modules are built before running tests.
 	  Test that -M overrides PDSH_MISC_MODULES env var.
